alignment fixed

--- a/src/styles/_work.scss
+++ b/src/styles/_work.scss
@@ -22,7 +22,6 @@
       text-align: left;
     }
     .job__title {
-      margin-bottom: 20px !important;
       font-size: 28px !important;
     }
     .job__points {
@@ -30,6 +29,40 @@
     }
     .company__name {
       font-size: 22px;
+    }
+  }
+}
+@media (max-width: 1024px) {
+  .experience-section {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 2em;
+    p:nth-child(1) {
+      margin-top: 30px;
+      font-size: 20px;
+      margin-bottom: 10px;
+      text-align: center;
+    }
+    .job {
+      margin-top: 50px;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      // justify-content: center;
+      p {
+        margin: 0 !important;
+        padding: 0 !important;
+        text-align: left;
+      }
+      .job__title {
+        font-size: 24px !important;
+      }
+      .job__points {
+        font-size: 16px;
+      }
+      .company__name {
+        font-size: 20px;
+      }
     }
   }
 }
